# crypto-api

./: .dockerignore  .env_template  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 035b6c563f7f_add_tables_for_btc_and_eth.py  e760a433f1c2_.py
src/: main.py
src/api/: annotations.py  router.py  service.py
src/client/: crypto_client.py  service.py  tasks.py  urls.py
src/core/: celery_app.py  config.py  database.py  setup.py
src/database/: connection.py  database.py  models.py
src/settings/: celery_app.py  config.py
tests/: conftest.py  tests.py
